--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Gamester</title>
-  </head>
-  <body>
-	
-	<div id="close" class="close-content">
-	<button  type="button" onclick="hideInfo()">X</button>
-	</div>
-	<div id="RPG" class="gameCategory">
-		<h2>Role playing games</h2>
-		<p>A role-playing game (sometimes spelled roleplaying game; abbreviated RPG) is a game in which players assume the roles of characters in a fictional setting. Players take responsibility for acting out these roles within a narrative, either through literal acting, or through a process of structured decision-making regarding character development.Actions taken within many games succeed or fail according to a formal system of rules and guidelines.
-		</p>
-		<p>There are several forms of role-playing games. The original form, sometimes called the tabletop role-playing game (TRPG), is conducted through discussion, whereas in live action role-playing (LARP), players physically perform their characters' actions.In both of these forms, an arranger called a game master (GM) usually decides on the rules and setting to be used, while acting as the referee; each of the other players takes on the role of a single character.
-		</p>
-		<p>Several varieties of RPG also exist in electronic media, such as multiplayer text-based Multi-User Dungeons (MUDs) and their graphics-based successors, massively multiplayer online role-playing games (MMORPGs). Role-playing games also include single-player role-playing video games in which players control a character, or team of characters, who undertake(s) quests, and may include player capabilities that advance using statistical mechanics. These electronic games sometimes share settings and rules with tabletop RPGs, but emphasize character advancement more than collaborative storytelling.</p>
-		<p>This type of game is well-established, so some RPG-related game forms, such as trading/collectible card games (CCGs) and wargames, may not be included under the definition. Some amount of role-playing activity may be present in such games, but it is not the primary focus.The term role-playing game is also sometimes used to describe games involving roleplay simulation and exercises used in teaching, training, and academic research.</p>
-		</div>
-	<div id="FPS" class="gameCategory">
-		<h2>First person shooting</h2>
-	</div>
-	<div id="Racing" class="gameCategory">
-		<h2>Racing</h2>
-	</div>
-	<div id="Free to play" class="gameCategory">
-		<h2>Free to play</h2>
-	</div>	
-</div>
-	<script src="myscript.js"></script>
 
-    <div id="root">
-    </div>
+    <div id="root"> </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -44,5 +12,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+
 </html>
