Added webpack with error

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/dist/bundle.css">
+</head>
+  <body>
 
-    <div id="root"> </div>
+  <div id="root"> </div>
+
+  <script src="./dist/bundle.js"></script>
+
+</body>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
